--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@
     position: relative;
     width: 100%;
     height: 100vh; /* Full viewport height */
-    background-image: url('https://github.com/Shanila-Khan/FinalProject/blob/master/img/falicia%20banner.jpg'); /* Replace with your image path */
+    background-image: url('href="/Shanila-Khan/FinalProject/blob/master/img/falicia%20banner.jpg'); /* Replace with your image path */
     background-size: cover;
     background-position: center;
     display: flex;
@@ -435,3 +435,11 @@
     border-color: var(--light-grey);
     color: #fff;
 }
+   .header-background {
+            background-image: url('https://raw.githubusercontent.com/Shanila-Khan/FinalProject/master/img/falicia%20banner.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 100vh; /* Adjust the height as needed */
+            color: #000; /* Ensure the text color is readable */
+        }
