--- a/css/style.css
+++ b/css/style.css
@@ -142,32 +142,6 @@
 }
 
 
-/*** Header ***/
-.carousel-caption {
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    background: rgba(0, 0, 0, .75);
-    z-index: 1;
-}
-
-.carousel-control-prev,
-.carousel-control-next {
-    width: 15%;
-}
-
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
-    width: 3rem;
-    height: 3rem;
-    background-color: var(--primary);
-    border: 10px solid var(--primary);
-}
 
 @media (max-width: 768px) {
     #header-carousel .carousel-item {
@@ -464,3 +438,37 @@
             -webkit-background-clip: text;
             color: transparent;
         }
+       .image-container {
+            position: relative;
+            overflow: hidden;
+            padding: 1125px 1125px 1100px 1105px; /* Add padding to the bottom */
+            height: 100%;
+            min-height: 400px;
+        }
+
+      .image-container {
+            position: relative;
+            overflow: hidden;
+            padding: 5px 5px 0px 5px; /* Remove bottom padding */
+            margin-bottom: -200px; /* Add negative margin to move the image up */
+            height: 100%;
+            min-height: 400px;
+        }
+        .image-container img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        /* Define gradient text style */
+.gradient-text {
+    background: linear-gradient(to right, #ffcccb, #ff69b4); /* Light pink to pink gradient */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+/* Ensure text colors for grey */
+h2 .text-grey {
+    color: darkgrey;
+}
