--- a/css/style.css
+++ b/css/style.css
@@ -41,41 +41,33 @@
 
 
 /*** Button ***/
-.btn {
-    font-weight: 500;
-    transition: .5s;
+.btn-primary,
+.btn-square.btn-outline-light {
+    background-color: var(--grey);
+    border-color: var(--grey);
+    color: #fff;
 }
 
-.btn.btn-primary,
-.btn.btn-outline-primary:hover {
-    color: #FFFFFF;
+.btn-primary:hover,
+.btn-square.btn-outline-light:hover {
+    background-color: var(--light-grey);
+    border-color: var(--light-grey);
+    color: #fff;
 }
 
 .btn-square {
-    width: 38px;
-    height: 38px;
+    background-color: transparent; /* Ensure the square buttons are initially transparent */
 }
 
-.btn-sm-square {
-    width: 32px;
-    height: 32px;
+.btn-square.btn-outline-light {
+    border: 2px solid grey; /* Define the border for square buttons */
 }
 
-.btn-lg-square {
-    width: 48px;
-    height: 48px;
+.btn-square.btn-outline-light:hover {
+    background-color: var(--light-grey);
+    border-color: var(--light-grey);
+    color: #fff;
 }
-
-.btn-square,
-.btn-sm-square,
-.btn-lg-square {
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: normal;
-}
-
 
 /*** Navbar ***/
 .navbar.sticky-top {
@@ -401,7 +393,7 @@
 }
 
 .btn-square.btn-outline-light {
-    border: 2px solid #fff; /* Define the border for square buttons */
+    border: 2px solid grey; /* Define the border for square buttons */
 }
 
 .btn-square.btn-outline-light:hover {
