--- a/css/style.css
+++ b/css/style.css
@@ -172,9 +172,10 @@
 /*** Courses ***/
 .courses {
     min-height: 100vh;
-    background: linear-gradient(rgba(255, 255, 255, .9), rgba(255, 255, 255, .9)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(255, 255, 255, .9), rgba(255, 255, 255, .9)), url(https://felicia.day/wp-content/uploads/2023/11/FELICIADAY6530-PROOF.jpg) center center no-repeat;
     background-attachment: fixed;
     background-size: cover;
+        
 }
 
 .courses-item .courses-overlay {
@@ -430,7 +431,7 @@
             -webkit-background-clip: text;
             color: transparent;
         }
-<<<<<<< HEAD
+<<<<<< HEAD
        .image-container {
             position: relative;
             overflow: hidden;
